# JavaScript-Experiments

./: .browserslistrc  .gitignore  .stylelintrc.json  Cargo.toml  LICENSE  README.md  gulpfile.js  package-lock.json  package.json  server.js  tasks.json  tsconfig.json  tslint.json
https/: Self-signed cert instructions.txt
secure/: Payments.html  secureServer.js
src/: main.ts  make.bat  qrMain.ts
src/c code/: demo.cpp
src/css/: animations.css  ie8.css  lazyYouTube.css  print.css  safeComments.css  style.css
src/favicon/: faviconData.json
src/html/: Payments.html  QRCode.html  index.html
src/json/: comments-1.json
src/modules/: AutoComplete.ts  ClientClipboard.ts  EnsureSendJson.ts  LazyLoad.ts  LoadBytecode.ts  Localiser.ts  PaymentRequest.ts  PrintManager.ts  QRCodeRenderer.ts  SafeComments.ts  TimingInformationELem.ts  readyManager.ts
src/polyfills/es3/: DataList.ts  ElementMatches.ts  ReportValidity.ts  RequestAnimationFrame.ts  RequestIdleCallback.ts  SendBeacon.ts  WebWorker.ts
src/polyfills/es5/: BroadcastChannel.ts
src/rust code/: demo.rs
src/serviceWorker/: serviceWorker.ts  tsconfig.json
src/workers/: QRCodeRenderer.ts  ensureSendJsonSw.ts  tsconfig.json
test/: tests.js
test/screenshots/: README.txt
